--- a/.github/workflows/create-video.yml
+++ b/.github/workflows/create-video.yml
@@ -1,9 +1,9 @@
-name: Daily Relatos Video Production
+name: Daily WWII Video Production
 
 on:
   schedule:
-    # Executa 1x por dia às 10:00 UTC (10:00 BRT)
-    - cron: '0 13 * * *'
+    # Executa 1x por dia às 10:00 UTC (7:00 BRT)
+    - cron: '0 10 * * *'
   workflow_dispatch:  # Permite executar manualmente
     inputs:
       skip_questions:
@@ -43,8 +43,6 @@ jobs:
           TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
           YOUTUBE_CREDENTIALS: ${{ secrets.YOUTUBE_CREDENTIALS }}
-          FACEBOOK_ACCESS_TOKEN: ${{ secrets.FACEBOOK_ACCESS_TOKEN }}
-          FACEBOOK_PAGE_ID: ${{ secrets.FACEBOOK_PAGE_ID }}
           SKIP_QUESTIONS: ${{ github.event.inputs.skip_questions }}
         run: python workflow_manager.py
 
