--- a/.github/workflows/create-video.yml
+++ b/.github/workflows/create-video.yml
@@ -1,64 +1,76 @@
-name: Daily WWII Video Production
+name: Create Video Production
 
 on:
   schedule:
-    # Executa 1x por dia às 10:00 UTC (7:00 BRT)
-    - cron: '0 10 * * *'
-  workflow_dispatch:  # Permite executar manualmente
+    - cron: '0 12 * * *'  # 12h UTC diariamente
+  workflow_dispatch:
     inputs:
-      skip_questions:
-        description: 'Pular perguntas e cancelar? (apenas para testes)'
+      force_run:
+        description: 'Force production run'
         required: false
-        type: boolean
-        default: false
+        default: 'false'
+
+# ADICIONAR ESTA SEÇÃO - MUITO IMPORTANTE!
+permissions:
+  contents: write      # Permite criar releases e commits
+  issues: write        # Permite criar issues se necessário
+  actions: write       # Permite gerenciar workflows
 
 jobs:
   create-video:
     runs-on: ubuntu-latest
-    timeout-minutes: 180  # 3 horas de timeout
+    timeout-minutes: 120
     
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-
+      
       - name: Setup Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
-          python-version: '3.10'
-
+          python-version: '3.11'
+      
       - name: Install system dependencies
         run: |
           sudo apt-get update
           sudo apt-get install -y ffmpeg imagemagick
-          
+      
       - name: Install Python dependencies
         run: |
           pip install --upgrade pip
           pip install -r requirements.txt
-
-      - name: Run video production workflow
+      
+      - name: Run workflow manager
         env:
           TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
           YOUTUBE_CREDENTIALS: ${{ secrets.YOUTUBE_CREDENTIALS }}
-          SKIP_QUESTIONS: ${{ github.event.inputs.skip_questions }}
-        run: python workflow_manager.py
-
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # IMPORTANTE!
+        run: |
+          python workflow_manager.py
+      
       - name: Commit production logs
-        if: success()
+        if: always()
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git add productions/*.json || true
-          git diff --quiet && git diff --staged --quiet || git commit -m "📹 Video production completed - $(date +'%Y-%m-%d %H:%M')"
-          git push || echo "Nothing to commit"
-
+          git add productions/pending_downloads.json || true
+          git diff --staged --quiet || git commit -m "📝 Update production logs"
+      
+      - name: Push changes
+        if: always()
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: ${{ github.ref }}
+      
       - name: Upload video artifact
-        if: success()
+        if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: video-${{ github.run_number }}
+          name: video-output
           path: output/*.mp4
-          retention-days: 7
+          retention-days: 1
